--- a/requirements.txt
+++ b/requirements.txt
@@ -6,6 +6,7 @@ Flask==3.1.0
 fsspec==2025.3.0
 ftfy==6.3.1
 gunicorn==23.0.0
+huggingface_hub==0.29.3
 itsdangerous==2.2.0
 Jinja2==3.1.6
 joblib==1.4.2
